# tg-business-card

./: .dockerignore  .env.dist  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start
business_card/: __main__.py  config.py  db.py  exceptions.py  loader.py  models.py  start.py  states.py  tortoise_config.json  ui.py  utils.py
business_card/db/: __init__.py
business_card/dialogs/: __init__.py  admin.py  index.py  main.py  secondary.py  tg_service.py  translate.py
business_card/dialogs/windows/: confirm.py
business_card/diologs/: __init__.py  main.py  secondary.py  tg_service.py  translate.py
business_card/routers/: admin.py  translate.py
