[tool.poetry]
name = "business-card"
version = "0.1.0"
description = ""
authors = ["scary <scary@scary.com>"]
readme = "README.md"
packages = [{include = "business_card"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
aiogram-dialog = "2.0.0b18"
aiogram = "3.0.0b7"
redis = "^4.5.5"
deep-translator = "^1.11.1"
environ-config = "^23.2.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
